xine-lib (1.1)
  * updated vidix to 0.9.9

xine-lib (1.0.1)
  * fixed builds with Xv or the entire X11 unavailble
  * updated internal copies of VCD libraries to libcdio 0.71 and vcdimager 0.7.21
  * fixed compatibility with new libtool versions [bug #1094262]
  * renamed input.http_no_proxy to media.network.http_no_proxy
  * tightened no-proxy domain matching & added exact host match ('=' prefix)
  * assume that front ends can handle tabs (ffmpeg pp plugin help text)
  * fixed MMS/ASF chained stream bug
  * Shoutcast: fixed meta info handling
  * MMST: fixed incorrect command length
  * fixed end of stream detection with AVI files
  * added support for WMA Voice codec
  * added limited support for character entities to the XML parser
  * fixed support of icecast 2 server
  * fixed some memleaks related to DVD playback and MPEG PES
  * fixed PNG/MNG image distortion and incorrect colouring

xine-lib (1.0)
  * unbreak DXR3 plugin
  * fix crash in the AIFF demuxer on oversized chunks
  * fix crash in the sputext decoder when subtitles have too many lines
    [bug #1086775]
  * added support for OGG chained streams
  * fixed deadlock with ASF chained streams due to fifo buffer leak
  * DVB Subtitles: fixed flashing, repeating subs, fix sync & timeouts
  * DVB EPG: fixed incorrectly parsed running status, clear old epg data, cropped epg texts
  * updated included libdvdnav: more graceful handling of some error conditions;
    fixed playback of some strangely authored DVDs
  * fixed problem with first subtitle not showing when using separate subtitle files
  * fixed crash related to relative HTTP redirect URLs (implemented canonicalisation)
  * linking libXv dynamically, fixes breakage of Xv plugin

xine-lib (1-rc8)
  * Multiple security vulnerabilities fixed on PNM and Real RTSP clients
  * Rewrote OpenGL output plugin.
  * Fixed segfault when seeking with the "xvmc" and "xxmc" plugins playing 
    files with IDCT / mocomp XvMC acceleration. 